--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,8 +18,12 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/b6c2f93973.js"
+      crossorigin="anonymous"
+    ></script>
 
-    <title>React App</title>
+    <title>Tiny Blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
